--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 OpenMap.lt official repository
+
+public - site with all public files
+osmlt - Lithuanian style
+transport - Public transport transparent map style
